--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                         <div class="welcome">
                             <div class="mask">
                                 <h1 class="hero-text">RONO-TECH CLUB</h1>
-                                <h1 class="hero-text">PC DEALERS</h1>
-                                <p>Custom builds, high end parts, repairs...</p>
+                                <h1>Custom builds, repairs...</h1>
+                                <p>(click 'build PC' to access the form)</p>
                                 <!-- <ul>
                                     <li>Custom build</li>
                                     <li>High end PC parts</li>
