--- a/index.html
+++ b/index.html
@@ -78,7 +78,9 @@
                                 <p class="description">
                                     From high end RTX 4090 to more budget friendly RX 64000
                                 </p>
-                                <button class="shop">shop</button>
+                                <a href="./pages/products.html">
+                                    <button class="shop">shop</button>
+                                </a>
                             </div>
                         </div>
                         <div class="card">
@@ -87,7 +89,9 @@
                                 <p class="description">
                                     From high end RTX 4090 to more budget friendly RX 64000
                                 </p>
-                                <button class="shop">shop</button>
+                                <a href="./pages/products.html">
+                                    <button class="shop">shop</button>
+                                </a>
                             </div>
                         </div>
                         <div class="card">
@@ -96,7 +100,9 @@
                                 <p class="description">
                                     From high end RTX 4090 to more budget friendly RX 64000
                                 </p>
-                                <button class="shop">shop</button>
+                                <a href="./pages/products.html">
+                                    <button class="shop">shop</button>
+                                </a>
                             </div>
                         </div>
                         <div class="card">
@@ -105,7 +111,9 @@
                                 <p class="description">
                                     From high end RTX 4090 to more budget friendly RX 64000
                                 </p>
-                                <button class="shop">shop</button>
+                                <a href="./pages/products.html">
+                                    <button class="shop">shop</button>
+                                </a>
                             </div>
                         </div>
                         <div class="card">
@@ -114,7 +122,9 @@
                                 <p class="description">
                                     From high end RTX 4090 to more budget friendly RX 64000
                                 </p>
-                                <button class="shop">shop</button>
+                                <a href="./pages/products.html">
+                                    <button class="shop">shop</button>
+                                </a>
                             </div>
                         </div>
                         <div class="card">
@@ -123,7 +133,9 @@
                                 <p class="description">
                                     From high end RTX 4090 to more budget friendly RX 64000
                                 </p>
-                                <button class="shop">shop</button>
+                                <a href="./pages/products.html">
+                                    <button class="shop">shop</button>
+                                </a>
                             </div>
                         </div>
                         
