made local storge functionnality

--- a/index.html
+++ b/index.html
@@ -78,41 +78,41 @@
                                 <p class="description">
                                     From high end RTX 4090 to more budget friendly RX 64000
                                 </p>
-                                <a href="./pages/products.html">
-                                    <button class="shop">shop</button>
+                                <a href="./pages/products.html" >
+                                    <button class="shop" onclick="setCategory('gpu')">shop</button>
                                 </a>
                             </div>
                         </div>
                         <div class="card">
                             <div class="mask">
-                                <h2>GPU</h2>
+                                <h2>CPU</h2>
                                 <p class="description">
-                                    From high end RTX 4090 to more budget friendly RX 64000
+                                    Latest from team blue and team red!
                                 </p>
                                 <a href="./pages/products.html">
-                                    <button class="shop">shop</button>
+                                    <button class="shop" onclick="setCategory('cpu')">shop</button>
                                 </a>
                             </div>
                         </div>
                         <div class="card">
                             <div class="mask">
-                                <h2>GPU</h2>
+                                <h2>MONITOR</h2>
                                 <p class="description">
-                                    From high end RTX 4090 to more budget friendly RX 64000
+                                    Enhance viewing experience with OLED
                                 </p>
                                 <a href="./pages/products.html">
-                                    <button class="shop">shop</button>
+                                    <button class="shop" onclick="setCategory('monitor')">shop</button>
                                 </a>
                             </div>
                         </div>
                         <div class="card">
                             <div class="mask">
-                                <h2>GPU</h2>
+                                <h2>Gear</h2>
                                 <p class="description">
-                                    From high end RTX 4090 to more budget friendly RX 64000
+                                    Game with the convenience of a pilot onflight
                                 </p>
                                 <a href="./pages/products.html">
-                                    <button class="shop">shop</button>
+                                    <button class="shop"  onclick="setCategory('gear')">shop</button>
                                 </a>
                             </div>
                         </div>
@@ -146,5 +146,7 @@
             </main>
         </div>
     </div>
+
+    <script src="app.js"></script>
 </body>
 </html>
