--- a/pages/products.html
+++ b/pages/products.html
@@ -41,6 +41,7 @@
                 
                 <section  class="wrapper">
                     <p class="heading-small">categories</p>
+                    <p style="padding: 0 12px;">Click on a category to filter!</p>
 
                     <div class="categories">
                         <div class="cat-card" onclick="fillProducts()">
