changed cusor type for homepage buttons

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                             <div class="mask">
                                 <h2>GPU</h2>
                                 <p class="description">
-                                    From high end RTX 4090 to more budget friendly RX 64000
+                                    performance is the name  
                                 </p>
                                 <a href="./pages/products.html">
                                     <button class="shop">shop</button>
@@ -131,7 +131,7 @@
                             <div class="mask">
                                 <h2>GPU</h2>
                                 <p class="description">
-                                    From high end RTX 4090 to more budget friendly RX 64000
+                                    boost your fps
                                 </p>
                                 <a href="./pages/products.html">
                                     <button class="shop">shop</button>
