copied basic structure to custom.html

--- a/index.html
+++ b/index.html
@@ -58,9 +58,11 @@
                                     <li>High end PC parts</li>
                                     <li>PC repairs</li>
                                 </ul> -->
-                                <button class="shop build-pc">
-                                    <h3>build your PC</h3>
-                                </button>
+                                <a href="./pages/custom.html">
+                                    <button class="shop build-pc">
+                                        <h3>build your PC</h3>
+                                    </button>
+                                </a>
                                 <p><li></li></p>
                             </div>
                         </div>
