--- a/pages/profile.html
+++ b/pages/profile.html
@@ -69,7 +69,35 @@
                                     <option value="" selected hidden>select an option</option>
                                 </select>
                             </div>
+
+                            <div class="form-field">
+                                <label for="nick-name">nick-name (optional)</label>
+                                <input type="text" name="nick-name" id="">
+                            </div>
+
+                            <div class="form-field">
+                                <label for="DP">profile pic</label>
+                                <input type="file" name="DP" id="">
+                            </div>
+
+                            <div class="form-field">
+                                <label for="bio">bio:</label>
+                                <textarea name="bio" id=""></textarea>
+                            </div>
+
+                            <div class="form-field">
+                                <fieldset>
+                                    <legend>purpose for buying pc</legend>
+                                    <input type="checkbox" name="purpose" id="gaming">
+                                    <label for="gaming">gaming</label> <br/>
+                                    <input type="checkbox" name="purpose" id="office">
+                                    <label for="office">office work</label><br/>
+                                    <input type="checkbox" name="purpose" id="content">
+                                    <label for="content">content creation</label>
+                                </fieldset>
+                            </div>
                         </form>
+
                     </div>
                 </section>
 
