--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 
                 <ul class="nav-links">
                     <a href="./pages/profile.html"><li class="link">profile</li></a>
-                    <a href="./pages/products.html"><li class="link">basket</li></a>
+                    <a href="./pages/custom.html"><li class="link">my build</li></a>
                     <a href="./pages/products.html"><li class="link">shop</li></a>
                     <a href="./pages/about.html"><li class="link">about</li></a>
                 </ul>
