--- a/pages/profile.html
+++ b/pages/profile.html
@@ -21,7 +21,7 @@
                 
                 <ul class="nav-links">
                     <a href="../index.html"><li class="link">home</li></a>
-                    <a href="./products.html"><li class="link">basket</li></a>
+                    <a href="./custom.html"><li class="link">my build</li></a>
                     <a href="./products.html"><li class="link">shop</li></a>
                     <a href="./about.html"><li class="link">about</li></a>
                 </ul>
