--- a/pages/profile.html
+++ b/pages/profile.html
@@ -54,18 +54,18 @@
                             </div>
 
                             <div class="form-field">
-                                <label for="first-name">Last name:</label>
-                                <input type="text" id="first-name">
+                                <label for="last-name">Last name:</label>
+                                <input type="text" id="last-name">
                             </div>
 
                             <div class="form-field">
-                                <label for="town">Age:</label>
+                                <label for="age">Age:</label>
                                 <input type="number" id="age">
                             </div>
 
                             <div class="form-field">
                                 <label for="gender">gender</label>
-                                <select name="gender" id="">
+                                <select name="" id="gender">
                                     <option value="male">male</option>
                                     <option value="female">female</option>
                                     <option value="N/A">will only complicate things</option>
@@ -75,17 +75,17 @@
 
                             <div class="form-field">
                                 <label for="nick-name">nick-name (optional)</label>
-                                <input type="text" name="nick-name" id="">
+                                <input type="text" name="" id="nick-name">
                             </div>
 
                             <div class="form-field">
                                 <label for="DP">profile pic</label>
-                                <input type="file" name="DP" id="">
+                                <input type="file" name="" id="DP">
                             </div>
 
                             <div class="form-field">
                                 <label for="bio">bio:</label>
-                                <textarea name="bio" id=""></textarea>
+                                <textarea name="" id="bio"></textarea>
                             </div>
 
                             <div class="form-field">
