fixed form controls

--- a/pages/profile.html
+++ b/pages/profile.html
@@ -99,6 +99,14 @@
                                     <label for="content">content creation</label>
                                 </fieldset>
                             </div>
+
+                            <div class="form-field">
+                                <button class="submit" type="reset">reset</button>
+                            </div>
+
+                            <div class="form-field">
+                                <button class="submit" type="submit">submit</button>
+                            </div>
                         </form>
 
                     </div>
