--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <a href="./pages/profile.html"><li class="link">profile</li></a>
                     <a href="./pages/custom.html"><li class="link">my build</li></a>
                     <a href="./pages/products.html"><li class="link">shop</li></a>
-                    <a href="./pages/basket.html"><li class="link">basket</li></a>
+                    <a href="./pages/basket.html"><li class="link basket">basket <span class="message-bubble">0</span></li></a>
                     <a href="./pages/about.html"><li class="link">about</li></a>
                 </ul>
                 <p></p>
@@ -150,5 +150,6 @@
     <script src="app.js"></script>
     <script src="./scripts/menu.js"></script>
     <script src="./scripts/homepage.js"></script>
+    <script src="./scripts/notifications.js"></script>
 </body>
 </html>
