--- a/pages/about.html
+++ b/pages/about.html
@@ -21,9 +21,10 @@
                 
                 <ul class="nav-links">
                     <a href="../index.html"><li class="link">home</li></a>
-                    <a href="./custom.html"><li class="link">my build</li></a>
                     <a href="./profile.html"><li class="link">profile</li></a>
+                    <a href="./custom.html"><li class="link">my build</li></a>
                     <a href="./products.html"><li class="link">shop</li></a>
+                    <a href="./basket.html"><li class="link basket">basket <span class="message-bubble">0</span></li></a>
                 </ul>
                 <p></p>
                 <p></p>
@@ -71,5 +72,6 @@
     </div>
 
     <script src="../scripts/menu.js"></script>
+    <script src="../scripts/notifications.js"></script>
 </body>
 </html>
