consistent arrangement of links

--- a/pages/custom.html
+++ b/pages/custom.html
@@ -23,6 +23,7 @@
                     <a href="../index.html"><li class="link">home</li></a>
                     <a href="./profile.html"><li class="link">profile</li></a>
                     <a href="./products.html"><li class="link">shop</li></a>
+                    <a href="./basket.html"><li class="link basket">basket <span class="message-bubble">0</span></li></a>
                     <a href="./about.html"><li class="link">about</li></a>
                 </ul>
                 <p></p>
