--- a/pages/products.html
+++ b/pages/products.html
@@ -21,9 +21,9 @@
                 
                 <ul class="nav-links">
                     <a href="../index.html"><li class="link">home</li></a>
-                    <a href="./custom.html"><li class="link">my build</li></a>
-                    <a href="./basket.html"><li class="link">basket</li></a>
                     <a href="./profile.html"><li class="link">profile</li></a>
+                    <a href="./custom.html"><li class="link">my build</li></a>
+                    <a href="./basket.html"><li class="link basket">basket <span class="message-bubble">0</span></li></a>
                     <a href="./about.html"><li class="link">about</li></a>
                 </ul>
                 <p></p>
