added notification scripts to all pages

--- a/pages/custom.html
+++ b/pages/custom.html
@@ -202,5 +202,7 @@
     </div>
 
     <script src="../scripts/menu.js"></script>
+    <script src="../scripts/notifications.js"></script>
+
 </body>
 </html>
