--- a/pages/products.html
+++ b/pages/products.html
@@ -73,5 +73,7 @@
 
     <script src="../scripts/products.js"></script>
     <script src="../scripts/menu.js"></script>
+    <script src="../scripts/notifications.js"></script>
+
 </body>
 </html>
