--- a/pages/basket.html
+++ b/pages/basket.html
@@ -68,5 +68,7 @@
     
     <script src="../scripts/basket.js"></script>
     <script src="../scripts/menu.js"></script>
+    <script src="../scripts/notifications.js"></script>
+
 </body>
 </html>
