--- a/pages/profile.html
+++ b/pages/profile.html
@@ -118,5 +118,7 @@
     </div>
 
     <script src="../scripts/menu.js"></script>
+    <script src="../scripts/notifications.js"></script>
+
 </body>
 </html>
